--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mime-types": "^3.0.1",
     "multer": "^2.0.1",
     "openai": "^5.9.0"
   },
