--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
     "express": "^5.1.0",
     "multer": "^2.0.1",
     "openai": "^5.9.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aki-710/Re-verce.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aki-710/Re-verce/issues"
+  },
+  "homepage": "https://github.com/aki-710/Re-verce#readme"
 }
